--- a/src/app/pages/admin/anuncios/anuncios.component.html
+++ b/src/app/pages/admin/anuncios/anuncios.component.html
@@ -33,8 +33,8 @@
                 <div class="col-sm-8"> <input type="search" class="form-control" id="searchQuery"
                         placeholder="Search...">
                 </div>
-                <div class="col-sm-4"> 
-                    <button class="btn btn-primary" type="button" (click)="showModal()">
+                <div class="col-sm-4">
+                    <button id="add-button" class="btn btn-primary" type="button" (click)="showModal()">
                         <span nz-icon nzType="plus" class="btn-icon"></span>
                     </button>
                 </div>
@@ -46,11 +46,8 @@
         <div class="col" *ngFor="let anuncio of arrAnuncios">
             <!-- <app-cardAnuncio [Anuncio_id]="Anuncio.Anuncio_id" [name]="Anuncio.name" [evento]="Anuncio.evento"
                 [description]="Anuncio.description"></app-cardAnuncio> -->
-                <app-card-anuncio
-                [name]="anuncio.name"
-                [imagen]="anuncio.imagen"
-                [description]="anuncio.description"
-                ></app-card-anuncio>
+            <app-card-anuncio [name]="anuncio.name" [imagen]="anuncio.imagen"
+                [description]="anuncio.description"></app-card-anuncio>
         </div>
     </div>
 </div>
