Created google login

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -14,7 +14,7 @@
         <input type="text" placeholder="Contraseña" />
         <button>INGRESAR</button>
       </form>
-      <div class="google-login-button">
+      <div class="google-login-button" (click)="glogin()">
         <span class="google-logo"></span>
         <span class="google-text">INGRESAR CON GOOGLE</span>
       </div>
