Added profile to drawer

--- a/src/app/components/user/header/header.component.html
+++ b/src/app/components/user/header/header.component.html
@@ -1,50 +1,74 @@
 <div class="container">
-    <div class="row">
-        <div class="col-2 p-0">
-            <a>
-                <img class="logo-tec" (click)="open()" src="assets/logo-borregos.png" alt="hey">
-            </a>
-        </div>
-        <div class="col">
-            <!-- <h1>Bienvenido</h1> -->
-            <ng-content [titulo]></ng-content>
-            
-        </div>
+  <div class="row">
+    <div class="col-2 p-0">
+      <a>
+        <img
+          class="logo-tec"
+          (click)="open()"
+          src="assets/logo-borregos.png"
+          alt="hey"
+        />
+      </a>
     </div>
-    
-    <nz-drawer
-      [nzClosable]="false"
-      [nzVisible]="visible"
-      [nzWidth]=250
-      nzPlacement="left"
-      nzTitle="Menu"
-      (nzOnClose)="close()"
-    >
+    <div class="col">
+      <!-- <h1>Bienvenido</h1> -->
+      <ng-content [titulo]></ng-content>
+    </div>
+  </div>
 
-      <ng-container *nzDrawerContent>
-        <!-- <img class="logo-tec" src="assets/logo-borregos.png" alt="hey"> -->
-        <ul nz-menu nzTheme="light" nzMode="inline">
+  <ng-template #footerTemplate>
+    <div class="profile">
+      <img [src]="imgUrl" alt="" />
+      <div class="name">
+        <p>{{ name }}</p>
+      </div>
+    </div>
+  </ng-template>
 
-            <li nz-menu-item nzMatchRouterExact routerLink="./" (click)="close()">
-              <span nz-icon nzType="home" nzTheme="outline"></span>
-              <span>Home</span>
-            </li>
-            <li nz-menu-item nzMatchRouterExact routerLink="./reservar" (click)="close()" >
-              <span nz-icon nzType="schedule" nzTheme="outline"></span>
-              <span>Reserva</span>
-            </li>
-            <li nz-menu-item nzMatchRouterExact routerLink="/torneos" (click)="close()">
-                <span nz-icon nzType="calendar"></span>
-                <span>Mis reservaciones</span>
-              </li>
-            <li nz-menu-item nzMatchRouterExact routerLink="/anuncios" (click)="close()">
-              <span nz-icon nzType="notification"></span>
-              <span>Anuncios</span>
-            </li>
-      
-          </ul>
-      </ng-container>
-      
-    </nz-drawer>
-    
+  <nz-drawer
+    [nzClosable]="false"
+    [nzVisible]="visible"
+    [nzWidth]="250"
+    nzPlacement="left"
+    nzTitle="Menu"
+    (nzOnClose)="close()"
+    [nzFooter]="footerTemplate"
+  >
+    <ng-container *nzDrawerContent>
+      <!-- <img class="logo-tec" src="assets/logo-borregos.png" alt="hey"> -->
+      <ul nz-menu nzTheme="light" nzMode="inline">
+        <li nz-menu-item nzMatchRouterExact routerLink="./" (click)="close()">
+          <span nz-icon nzType="home" nzTheme="outline"></span>
+          <span>Home</span>
+        </li>
+        <li
+          nz-menu-item
+          nzMatchRouterExact
+          routerLink="./reservar"
+          (click)="close()"
+        >
+          <span nz-icon nzType="schedule" nzTheme="outline"></span>
+          <span>Reserva</span>
+        </li>
+        <li
+          nz-menu-item
+          nzMatchRouterExact
+          routerLink="/torneos"
+          (click)="close()"
+        >
+          <span nz-icon nzType="calendar"></span>
+          <span>Mis reservaciones</span>
+        </li>
+        <li
+          nz-menu-item
+          nzMatchRouterExact
+          routerLink="/anuncios"
+          (click)="close()"
+        >
+          <span nz-icon nzType="notification"></span>
+          <span>Anuncios</span>
+        </li>
+      </ul>
+    </ng-container>
+  </nz-drawer>
 </div>
