--- a/src/app/components/user/reservar/tab-reservar/calendar/calendar.component.html
+++ b/src/app/components/user/reservar/tab-reservar/calendar/calendar.component.html
@@ -6,13 +6,15 @@
 		<nz-calendar
 			[nzFullscreen]="false"
 			(nzSelectChange)="onValueChange($event)"
-			(nzPanelChange)="onPanelChange($event)"
 		></nz-calendar>
 		<div *ngIf="availableTimes[0]" class="time-slots">
 			<button
 				*ngFor="let time of availableTimes[0].timeSlots"
 				nz-button
 				nzType="default"
+				(click)="
+					handleClick({ start_time: time.start_time, end_time: time.end_time })
+				"
 			>
 				<span class="start">{{ time.start_time }} </span> -
 				<span class="end"> {{ time.end_time }}</span>
