--- a/src/app/components/admin/tabEspacios/tabEspacios.component.html
+++ b/src/app/components/admin/tabEspacios/tabEspacios.component.html
@@ -6,6 +6,7 @@
         [code]="espacio.code"
         [open_at]="espacio.open_at"
         [close_at]="espacio.close_at"
+        [imagen]="espacio.imagen"
         >
         </app-cardEspacio>
     </div>
