--- a/src/app/components/admin/card-reservacion/card-reservacion.component.html
+++ b/src/app/components/admin/card-reservacion/card-reservacion.component.html
@@ -1,4 +1,4 @@
-<div class="container container-border">
+<!-- <div class="container container-border">
     <div class="row">
         <div class="col-sm-12">
             <p class="text-name">Paulina López Holguín</p>
@@ -18,4 +18,20 @@
         </div>
     </div>
 
+</div> -->
+<div class="reservas-container">
+	<div class="reserva">
+		<div class="reserva-preview">
+            <span nz-icon nzType="clock-circle" nzTheme="outline"></span>
+            <p>10:30-11:30</p>
+            <span nz-icon nzType="calendar" nzTheme="outline"></span>
+			<p>20 de mayo 2023</p>
+			<a >60 min <i class="fas fa-chevron-right"></i></a>
+		</div>
+		<div class="reserva-info">
+			<h5>A01284186@tec.mx</h5>
+			<h5>Paulina López Holguín</h5>
+			<button class="btn">Cancelar</button>
+		</div>
+	</div>
 </div>
