--- a/src/app/components/admin/cardEspacio/cardEspacio.component.html
+++ b/src/app/components/admin/cardEspacio/cardEspacio.component.html
@@ -9,7 +9,7 @@ close_at : close_at,
 espacio_padre_id : espacio_padre_id,
 imagen : imagen,
 is_active : is_active, }">
-    <img class="card-image" alt="espacio" src="../../../../assets/login-image.jpeg" />
+    <img class="card-image" alt="espacio" src={{baseURL+imagen}} />
     <p class="text" style="font-size: 0.8rem;top: 20%;">{{code}}</p>
     <h2 nz-typography class="title">{{name}}</h2>
     <p class="text" style="font-size: 0.8rem;top: 70%;">{{open_at | date:'shortTime'}} - {{open_at | date:'shortTime'}}</p>
