--- a/src/app/components/admin/cardTorneo/cardTorneo.component.css
+++ b/src/app/components/admin/cardTorneo/cardTorneo.component.css
@@ -1,55 +1,86 @@
 .container {
-  margin: 1%;
-  margin-top: 5%;
-  /* position: relative; */
+  position : relative;
+  width : 300px;
+  display : flex;
+  align-items : center;
+  justify-content : center;
+  flex-wrap : wrap;
+  /* padding : 30px;   */
 }
 
-.card-image {
-  border-radius: 40px;
-  filter: brightness(50%);
-  width: 150px;
-  height: 150px;
+.container .card {
+  position: relative;
+  max-width : 300px;
+  height : 215px;  
+  background-color : #fff;
+  margin : 30px 10px;
+  padding : 20px 15px;
+  display : flex;
+  flex-direction : column;
+  /* box-shadow : 0 5px 20px rgba(0,0,0,0.5); */
+  border-color: white;
+  transition : 0.3s ease-in-out;
+  border-radius : 15px;
+}
+.container .card:hover {
+  height : 320px;    
 }
 
-.card{
-    width: 250px;
-    height: 250px;
-    /* align-items: center; */
-    /* vertical-align: center; */
-    background-color: #004892;
-    position: relative;
+.container .card .image {
+  position : relative;
+  width : 230px;
+  height : 260px;
+  
+  top : -40%;
+  left: -5px;
+  /* box-shadow : 0 5px 20px rgba(0,0,0,0.2); */
+  z-index : 1;
 }
 
-.card:hover:before {
-  content: 'a';
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  filter: brightness(30%);
-  /* width: 300px; */
+.container .card .image img {
+  max-width : 100%;
+  border-radius : 15px;
 }
 
-
-.image {
-  width: 100%;
-  height: auto;
+.container .card .title {
+  position : relative;
+  top : -50px;
+  padding : 10px 15px;
+  color : #111;
+  text-align : center;
 }
 
-.text {
-  color: white;
-  text-align: left;
+.container .card:hover .title {
+  top : -100px;
+  transition : 0.3s ease-in-out;
 }
 
-.title {
-  font-size: 1rem;
-  /* top: 40%;
-  left: 20;
-  right: 20; */
-  /* position: absolute; */
-  margin-top: 5%;
-  margin-bottom: 5%;
-  color: white;
-  text-align: center;
+.container .card .content {
+  position : relative;
+  top : -140px;
+  padding : 10px 15px;
+  color : #111;
+  text-align : center;
+  visibility : hidden;
+  opacity : 0;
+  transition : 0.3s ease-in-out;
+}
+
+.container .card:hover .content {
+   margin-top : 30px;
+   visibility : visible;
+   opacity : 1;
+   transition-delay: 0.2s;
+}
+
+.container .card .content .delete {
+  position : relative;
+  color : red;
+  margin: 10px;
+}
+
+.container .card .content .redirect {
+  position : relative;
+  color : rgb(73, 125, 193);
+  margin: 10px;
 }
