--- a/src/app/pages/admin/panelAdmin/panelAdmin.component.html
+++ b/src/app/pages/admin/panelAdmin/panelAdmin.component.html
@@ -10,11 +10,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-6">
-            <div class="card">
-                <h2 nz-typography class="card-title" style="margin-top: 5%;">Estadisticas</h2>
-
-            </div>
+        <div class="col-sm-6"> <app-card-estadisticas></app-card-estadisticas>
         </div>
     </div>
 </div>
