--- a/src/app/components/admin/cardEspacio/cardEspacio.component.html
+++ b/src/app/components/admin/cardEspacio/cardEspacio.component.html
@@ -12,5 +12,5 @@ is_active : is_active, }">
     <img class="card-image" alt="espacio" src={{baseURL+imagen}} />
     <p class="text" style="font-size: 0.8rem;top: 20%;">{{code}}</p>
     <h2 nz-typography class="title">{{name}}</h2>
-    <p class="text" style="font-size: 0.8rem;top: 70%;">{{open_at | date:'shortTime'}} - {{open_at | date:'shortTime'}}</p>
+    <p class="text" style="font-size: 0.8rem;top: 70%;">{{open_at | date:'shortTime'}} - {{close_at | date:'shortTime'}}</p>
 </div>
