Proteced user routes

--- a/src/app/components/admin/admin-login/admin-login.component.css
+++ b/src/app/components/admin/admin-login/admin-login.component.css
@@ -17,7 +17,7 @@ body {
 }
 
 .left-container {
-  background-image: url(../../../assets/wellness.jpg);
+  background-image: url(../../../../assets/login-image.jpeg);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
