Added torneos view for user

--- a/src/app/pages/user/reservar-deporte/reservar-deporte.component.html
+++ b/src/app/pages/user/reservar-deporte/reservar-deporte.component.html
@@ -18,6 +18,7 @@
             <app-tab-reservar [data]="espacioOfDeporte"></app-tab-reservar>
         </nz-tab>
         <nz-tab nzTitle="Torneos">
+            <app-tab-torneos></app-tab-torneos>
         </nz-tab>
         <!-- </div> -->
     </nz-tabset>
