--- a/src/app/components/user/reservar/tab-reservar/calendar/calendar.component.css
+++ b/src/app/components/user/reservar/tab-reservar/calendar/calendar.component.css
@@ -9,23 +9,9 @@
 	margin: 15px;
 }
 
-/* nz-calendar {
-    display: block;
-    width: 390px;
-  } */
-
 .time-slots {
 	display: flex;
 	flex-flow: column;
 	flex-wrap: wrap;
-	/* justify-content: center;
-    align-content: center;
-    align-items: center; */
-}
-
-.time-slots button {
-	margin: 5px;
-	padding: 15px 0 35px 0;
-	font-family: Arial, Helvetica, sans-serif;
-	border-radius: 8px;
+	width: 100%;
 }
