--- a/src/app/components/user/reservar/tab-reservar/calendar/calendar.component.html
+++ b/src/app/components/user/reservar/tab-reservar/calendar/calendar.component.html
@@ -1,4 +1,4 @@
-<div class="parent-container">
+<div class="parent-container">	
 	<div
 		class="container"
 		[ngStyle]="{ border: '1px solid #d9d9d9', borderRadius: '4px' }"
@@ -12,17 +12,11 @@
 			(nzValueChange)="handleMonthChange($event)"
 		></nz-calendar>
 		<div *ngIf="availableTimes[0]" class="time-slots">
-			<button
-				*ngFor="let time of availableTimes[0].timeSlots"
-				nz-button
-				nzType="default"
-				(click)="
-					handleClick({ start_time: time.start_time, end_time: time.end_time })
-				"
-			>
-				<span class="start">{{ time.start_time }} </span> -
-				<span class="end"> {{ time.end_time }}</span>
-			</button>
+			<app-modal-confirm-reservation
+				[availableTimes]="availableTimes"
+				[selectedDate]="selectedDate"
+				[espacioId]="espacioId"
+			></app-modal-confirm-reservation>
 		</div>
 	</div>
 </div>
