--- a/src/app/pages/user/reservar-deporte/reservar-deporte.component.html
+++ b/src/app/pages/user/reservar-deporte/reservar-deporte.component.html
@@ -12,6 +12,7 @@
       <nz-tabset nzCentered>
         <!-- <div class="w-100"> -->
             <nz-tab nzTitle="Lugar">
+                <app-tab-lugar [espaciosPadre]="espaciosPadre" [espaciosHijo]="espacioOfDeporte"></app-tab-lugar>
             </nz-tab>
         <!-- </div> -->
         <nz-tab nzTitle="Reservar">
