--- a/src/app/components/admin/card-estadisticas/card-estadisticas.component.html
+++ b/src/app/components/admin/card-estadisticas/card-estadisticas.component.html
@@ -1,83 +1,56 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
     <div class="card">
-
         <h2 nz-typography class="card-title" style="margin-top: 5%;">Estadisticas</h2>
-        <nz-radio-group [(ngModel)]="radioValue" nzSize="large">
-            <label nz-radio-button nzValue="A">Diario</label>
-            <label nz-radio-button nzValue="B">Semanal</label>
-            <label nz-radio-button nzValue="C">Mensual</label>
-            <label nz-radio-button nzValue="D">Anual</label>
-          </nz-radio-group>
-            <div class="main-container">
-                <div class="year-stats">
-                    <div class="month-group">
-                        <div class="bar h-100"></div>
-                        <p class="month">Jan</p>
-                    </div>
-                    <div class="month-group">
-                        <div class="bar h-50"></div>
-                        <p class="month">Feb</p>
-                    </div>
-                    <div class="month-group">
-                        <div class="bar h-75"></div>
-                        <p class="month">Mar</p>
-                    </div>
-                    <div class="month-group">
-                        <div class="bar h-25"></div>
-                        <p class="month">Apr</p>
-                    </div>
-                    <div class="month-group selected">
-                        <div class="bar h-100"></div>
-                        <p class="month">May</p>
-                    </div>
-                    <div class="month-group">
-                        <div class="bar h-50"></div>
-                        <p class="month">Jun</p>
-                    </div>
-                    <div class="month-group">
-                        <div class="bar h-75"></div>
-                        <p class="month">Jul</p>
-                    </div>
-                    <div class="month-group">
-                        <div class="bar h-25"></div>
-                        <p class="month">Aug</p>
-                    </div>
-                    <div class="month-group">
-                        <div class="bar h-50"></div>
-                        <p class="month">Sep</p>
-                    </div>
-                    <div class="month-group">
-                        <div class="bar h-75"></div>
-                        <p class="month">Oct</p>
-                    </div>
-                    <div class="month-group">
-                        <div class="bar h-25"></div>
-                        <p class="month">Nov</p>
-                    </div>
-                    <div class="month-group">
-                        <div class="bar h-100"></div>
-                        <p class="month">Dez</p>
-                    </div>
-                </div>
-        
-                <div class="stats-info">
-                    <div class="graph-container">
-                        <div class="percent">
-                            <svg viewBox="0 0 36 36" class="circular-chart">
-                                <path class="circle" stroke-dasharray="90, 100" d="M18 2.0845
-              a 15.9155 15.9155 0 0 1 0 31.831
-              a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                
-                            </svg>
-                        </div>
-                        <p>Total: 90%</p>
-                    </div>
-        
-                    <div class="info">
-                        <p>Dia de la semana con mayor asistencia<br /><span> Miércoles</span></p>
-                        <p>Semana con mayor asistencia <span>Semana 2</span></p>
-                        <p>Mes con mayor asistencia <span>Marzo</span></p>
-                    </div>
-                </div>
-            </div>
-    </div>
+    
+        <!-- <ul nz-menu nzMode="horizontal" class="itemsContainer">
+            <li nz-menu-item nzSelected class="itemSelected">
+                <i nz-icon nzType="mail" onclick="hello()"></i>
+                General
+            </li>
+            <li nz-menu-item class="itemNotSelected">
+                <i nz-icon nzType="setting"></i>
+                Estadisticas de aforo 
+            </li>
+        </ul>
+         -->
+         
+        <div class="container">
+            <div class="row">
+              <div class="col-md-6">
+                <h2>Column 1</h2>
+                <p>This is the content for column 1.</p>
+                <div class="chart-container">
+                    <canvas  id="MyChart" >
 
+                        <Componente2Component></Componente2Component>
+                    </canvas>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <h2>Column 2</h2>
+                <p>This is the content for column 2.</p>
+              </div>
+            </div>
+          </div>
+
+        
+    </div>
+     
+</body>
+
+
+<script>
+    function hello() {
+        alert("Hello World!");
+    }
+</script>
+
+</html>
